# cpp-cfr

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md
Game/: CMakeLists.txt  main.cpp
Game/Agent/: CFRAgent.cpp
Game/Kuhn/: CMakeLists.txt  Constant.hpp  Game.cpp  Game.hpp  Kuhn.hpp
RegretMinimization/: CMakeLists.txt  main.cpp
RegretMinimization/Agent/: CFRAgent.cpp  CFRAgent.hpp  CMakeLists.txt
RegretMinimization/Trainer/: CMakeLists.txt  Node.cpp  Node.hpp  Trainer.cpp  Trainer.hpp
